--- a/src/components/pages/login/login.component.html
+++ b/src/components/pages/login/login.component.html
@@ -8,14 +8,20 @@
       <h2 class="subtitle">
         Your virtual gun locker. Store pictures and serial numbers securely in the cloud.
       </h2>
+      <h3 class="subtitle">
+
+      </h3>
     </div>
+
   </div>
 </section>
-<div b-container>
-  <div class="notification">
-    My Gun Locker requires you to sign in using Google.
+<section class="notification is-warning">
+  <div b-container>
+    My Gun Locker requires you to sign in. Choose a provider below.
   </div>
+</section>
+<section b-container>
   <div class="center-btn">
-    <button b-btn="primary outline large" (click)="login()">Sign In With Google</button>
+    <button b-btn="link outline large fullwidth" (click)="login()">Sign In With Google</button>
   </div>
-</div>
+</section>
