started gun card rounded login button

--- a/src/components/pages/login/login.component.html
+++ b/src/components/pages/login/login.component.html
@@ -22,6 +22,6 @@
 </section>
 <section b-container>
   <div class="center-btn">
-    <button b-btn="link outline large fullwidth" (click)="login()">Sign In With Google</button>
+    <button b-btn="link outline large fullwidth rounded" (click)="login()">Sign In With Google</button>
   </div>
 </section>
