--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,19 +1,19 @@
 <nav class="navbar is-info is-fixed-top">
   <div b-container>
     <div class="navbar-brand">
-      <div class="navbar-item app-title">My Gun Locker</div>
-      <div class="navbar-burger burger" data-target="navMenu" (click)="toggle()">
+      <a class="navbar-item app-title">My Gun Locker</a>
+      <div class="navbar-burger burger" (click)="toggle()" [routerLink]="['/locker']">
         <span></span>
         <span></span>
         <span></span>
       </div>
     </div>
 
-    <div class="navbar-menu" id="navMenu" [ngClass]="classes">
+    <div class="navbar-menu" [ngClass]="classes">
       <div class="navbar-start">
-        <a class="navbar-item" [routerLink]="['/locker']">
+        <!-- <a class="navbar-item" [routerLink]="['/locker']">
           Locker
-        </a>
+        </a> -->
       </div>
 
       <div class="navbar-end">
