added serial number to guns fixed router link in navbar added css to hamburger to turn to cross

--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar is-info is-fixed-top">
   <div b-container>
     <div class="navbar-brand">
-      <a class="navbar-item app-title">My Gun Locker</a>
-      <div class="navbar-burger burger" (click)="toggle()" [routerLink]="['/locker']">
+      <a class="navbar-item app-title"  [routerLink]="['/locker']">My Gun Locker</a>
+      <div class="navbar-burger burger" (click)="toggle()" [ngClass]="classes">
         <span></span>
         <span></span>
         <span></span>
