added scroll top and copy to clipboard

--- a/src/components/guns/add-gun/add-gun.component.html
+++ b/src/components/guns/add-gun/add-gun.component.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section" style="padding: 1.5rem; padding-bottom: 0">
   <div b-container style="text-align: center">
     <a b-btn="link large" (click)="createTestGuns()">
       <span class="icon">
