--- a/src/components/guns/gun-card/gun-card.component.html
+++ b/src/components/guns/gun-card/gun-card.component.html
@@ -3,3 +3,19 @@
     {{gun.name}}
   </p>
 </header>
+<div class="card-content">
+  <div class="content">
+    <p class="subtitle">
+      <strong>SN:</strong>
+      <span>{{gun.serial}}</span>
+      <small *ngIf="showClipboard">
+        <a class="icon copy-icon" (click)="copy()">
+          <fa-icon [icon]="icon"></fa-icon>
+        </a>
+      </small>
+    </p>
+    <p>
+      {{gun.details}}
+    </p>
+  </div>
+</div>
