--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bulma/css/bulma.css';
+
+html {
+  padding-bottom: 1.1rem;
+}
