--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-info is-fixed-top">
-  <div b-container>
+  <div class="container">
     <div class="navbar-brand">
-      <a class="navbar-item app-title"  [routerLink]="['/locker']">My Gun Locker</a>
+      <a class="navbar-item app-title" routerLink="/">My Gun Locker</a>
       <div class="navbar-burger burger" (click)="toggle()" [ngClass]="classes">
         <span></span>
         <span></span>
