--- a/src/components/pages/locker/locker.component.html
+++ b/src/components/pages/locker/locker.component.html
@@ -1,12 +1,19 @@
-<section b-hero="My Guns" is="primary bold"></section>
-<section class="notification is-warning no-margin" *ngIf="!gunGroups.length">
-  <div b-container>
-    <h2 class="subtitle">
-      You haven't added any guns yet!
-    </h2>
+<section class="hero is-success is-bold" title="">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">My Gun Locker</h1>
+      <mgl-add-gun></mgl-add-gun>
+    </div>
   </div>
 </section>
-
-<mgl-add-gun></mgl-add-gun>
-<section [mgl-gun-card-cols-container]="gunGroups" *ngIf="gunGroups.length" style="padding: 1.5rem"></section>
+<section [mgl-gun-card-cols-container]="gunGroups" *ngIf="gunGroups.length; else empty" class="pad"></section>
+<ng-template #empty>
+  <section class="notification is-warning">
+    <div class="container">
+      <h2 class="subtitle">
+        You haven't added any guns yet!
+      </h2>
+    </div>
+  </section>
+</ng-template>
 <mgl-scroll-top></mgl-scroll-top>
