--- a/src/components/guns/add-gun/add-gun.component.html
+++ b/src/components/guns/add-gun/add-gun.component.html
@@ -1,10 +1,8 @@
-<section class="section" style="padding: 1.5rem; padding-bottom: 0">
-  <div b-container style="text-align: center">
-    <a b-btn="link large" (click)="createTestGuns()">
-      <span class="icon">
-        <fa-icon [icon]="plus"></fa-icon>
-      </span>
-      <span>Add Test Guns</span>
-    </a>
-  </div>
+<section class="section" style="padding-top: 0; padding-bottom: 0; text-align: center">
+  <a class="button is-link is-rounded" [routerLink]="['/new']">
+    <span class="icon">
+      <fa-icon [icon]="plus"></fa-icon>
+    </span>
+    <span>Add Gun</span>
+  </a>
 </section>
