completely removed force change detection, using user observable from afauth

--- a/src/components/guns/add-gun/add-gun.component.html
+++ b/src/components/guns/add-gun/add-gun.component.html
@@ -1,5 +1,5 @@
-<section class="section" style="padding-top: 0; padding-bottom: 0; text-align: center">
-  <a class="button is-link is-rounded" [routerLink]="['/new']">
+<section class="section" style="padding-top: 1.5rem; padding-bottom: 0; text-align: center">
+  <a class="button is-link is-rounded" routerLink="/new">
     <span class="icon">
       <fa-icon [icon]="plus"></fa-icon>
     </span>
