--- a/src/components/guns/gun-card-cols-container/gun-card-cols-container.component.html
+++ b/src/components/guns/gun-card-cols-container/gun-card-cols-container.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-  <div *ngFor="let group of gunGroups" [mgl-gun-card-cols]="group"></div>
+  <div *ngFor="let group of gunGroups" class="columns" [mgl-gun-card-cols]="group"></div>
 </div>
