working basic photo upload

--- a/src/components/pages/login/login.component.html
+++ b/src/components/pages/login/login.component.html
@@ -19,6 +19,6 @@
 </section>
 <section class="container">
   <div class="center-btn">
-    <button class="button is-link is-outline is-large is-fullwidth is-rounded" (click)="login()">Sign In With Google</button>
+    <button class="button is-info is-outline is-large is-fullwidth is-rounded" (click)="login()">Sign In With Google</button>
   </div>
 </section>
