--- a/src/components/guns/gun-card/gun-card.component.html
+++ b/src/components/guns/gun-card/gun-card.component.html
@@ -3,6 +3,11 @@
     {{gun.name}}
   </p>
 </header>
+<div class="card-image">
+  <figure class="image is-4by3">
+    <img [src]="photoUrl" alt="{{name}} image">
+  </figure>
+</div>
 <div class="card-content">
   <div class="content">
     <p class="subtitle">
