componentized hero and notification, responsive forms

--- a/src/components/guns/gun-card/gun-card.component.html
+++ b/src/components/guns/gun-card/gun-card.component.html
@@ -22,3 +22,6 @@
     </p>
   </div>
 </div>
+<footer class="card-footer">
+  <a [routerLink]="['/g', gun.id]" class="card-footer-item">View / Update</a>
+</footer>
