--- a/src/components/guns/gun-card-cols-container/gun-card-cols-container.component.html
+++ b/src/components/guns/gun-card-cols-container/gun-card-cols-container.component.html
@@ -1,3 +1,5 @@
-<div class="container">
-  <div *ngFor="let group of gunGroups" class="columns" [mgl-gun-card-cols]="group"></div>
-</div>
+<section class="section">
+  <div class="container">
+    <div *ngFor="let group of gunGroups" class="columns" [mgl-gun-card-cols]="group"></div>
+  </div>
+</section>
