working update with primary photo

--- a/src/components/guns/gun-card/gun-card.component.html
+++ b/src/components/guns/gun-card/gun-card.component.html
@@ -11,7 +11,7 @@
 <div class="card-content">
   <div class="content">
     <p class="subtitle">
-      <strong>SN:</strong>
+      <strong>SN:</strong>&nbsp;
       <span>{{gun.serial}}</span>
       <a class="button is-rounded icon copy-icon" (click)="copy()" *ngIf="showClipboard">
         <fa-icon [icon]="icon"></fa-icon>
