--- a/src/components/pages/new-gun/new-gun.component.html
+++ b/src/components/pages/new-gun/new-gun.component.html
@@ -45,7 +45,7 @@
           <div class="field">
             <label class="label">Notes</label>
             <div class="control">
-              <textarea class="textarea" placeholder="Notes" name="notes" [(ngModel)]="Notes"></textarea>
+              <textarea class="textarea" placeholder="Notes" name="notes" [(ngModel)]="notes"></textarea>
             </div>
           </div>
         </div>
