--- a/src/components/guns/gun-card/gun-card.component.html
+++ b/src/components/guns/gun-card/gun-card.component.html
@@ -5,7 +5,7 @@
 </header>
 <div class="card-image">
   <figure class="image is-4by3">
-    <img [src]="photoUrl" alt="{{name}} image">
+    <img [src]="photoUrl" alt="{{gun.name}} image">
   </figure>
 </div>
 <div class="card-content">
