--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -18,11 +18,8 @@
 
       <div class="navbar-end">
         <a class="navbar-item" [href]="projectLink" target="_blank">
-          <span>Project Repo</span>
+          <span>MGL v{{version}}</span>
         </a>
-        <div class="navbar-item">
-          v{{version}}
-        </div>
         <div class="navbar-item has-dropdown" [ngClass]="dropdownClasses" *ngIf="username">
           <a class="navbar-link" (click)="toggleDropdown()">
             {{username}}
