--- a/src/components/bulma/hero/hero.component.html
+++ b/src/components/bulma/hero/hero.component.html
@@ -5,6 +5,7 @@
         <h2 class="subtitle" *ngIf="!hideSubtitle">
           {{subtitle}}
         </h2>
+        <ng-content></ng-content>
       </div>
     </div>
   </section>
