--- a/src/components/photo-card/photo-card.component.html
+++ b/src/components/photo-card/photo-card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-image">
+  <div class="card-image" *ngIf="showPhoto">
     <figure class="image is-4by3">
       <a [href]="url" target="_blank">
         <img [src]="url" [alt]="alt">
