cleaned up scroll top, prepared for navbar service

--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -1,6 +1,7 @@
 <mgl-navbar></mgl-navbar>
 <div *ngIf="loggedIn; else login">
   <router-outlet></router-outlet>
+  <mgl-scroll-top></mgl-scroll-top>
 </div>
 <ng-template #login>
   <mgl-login></mgl-login>
