--- a/src/components/pages/locker/locker.component.html
+++ b/src/components/pages/locker/locker.component.html
@@ -7,4 +7,4 @@
 <mgl-add-gun></mgl-add-gun>
 <mgl-gun-card-cols [guns]="guns" *ngIf="guns.length"></mgl-gun-card-cols>
 <!-- <mgl-gun-card-cols-container [gunGroups]="gunGroups" *ngIf="gunGroups.length"></mgl-gun-card-cols-container> -->
-<mgl-scroll-top></mgl-scroll-top>
+<!-- <mgl-scroll-top></mgl-scroll-top> -->
