--- a/src/components/scroll-top/scroll-top.component.html
+++ b/src/components/scroll-top/scroll-top.component.html
@@ -1,3 +1,3 @@
-<a class="button is-rounded is-small icon" (click)="scroll()">
+<a class="button is-rounded is-small icon is-white has-shadow" [class.visible]="visible$ | async" (click)="scroll()">
   <fa-icon [icon]="icon" class="scroll-icon"></fa-icon>
 </a>
