--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -14,6 +14,9 @@
         <!-- <a class="navbar-item" [routerLink]="['/']">
           Locker
         </a> -->
+        <a class="navbar-item" *ngFor="let action of actions$ | async" (click)="actionClick(action)">
+          {{action.text}}
+        </a>
       </div>
 
       <div class="navbar-end">
