--- a/src/components/navbar/navbar.component.html
+++ b/src/components/navbar/navbar.component.html
@@ -19,11 +19,14 @@
         </a>
       </div>
 
-      <div class="navbar-end">
-        <a class="navbar-item" [href]="projectLink" target="_blank">
-          <span>MGL v{{version}}</span>
+      <div class="navbar-end" *ngIf="username">
+        <a class="navbar-item" routerLink="/about">
+          About MGL
         </a>
-        <div class="navbar-item has-dropdown" [ngClass]="dropdownClasses" *ngIf="username">
+        <!-- <a class="navbar-item" [href]="projectLink" target="_blank">
+          <span>MGL v{{version}}</span>
+        </a> -->
+        <div class="navbar-item has-dropdown" [ngClass]="dropdownClasses">
           <a class="navbar-link" (click)="toggleDropdown()">
             {{username}}
           </a>
